--- a/maincss.css
+++ b/maincss.css
@@ -1,32 +1,51 @@
-body {background-color: rgb(132, 145, 223); }
+body {background-color: #5c7dd8; display: flex; flex-direction: column; background-repeat: repeat; margin: 0 10% 0 10%; }
 
-.title {background-color: whitesmoke;}
+html, body {
+  height: 100%;
+}
+
+.container {flex: 1 0 auto;}
+
+.title {background-color: #e0bb00;}
 
 .center {text-align: center;}
 
-.missionHeader {text-align:center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ; font-style: italic;} 
+.missionHeader {text-align:center; font-style: italic;} 
 
 .missionPara {margin: 0 10% 0 10%;}
 
-.aboutPic {width:20%; border-radius: 20px; float:left; margin: 5%;}
+.aboutPic {width:20%; border-radius: 20px; float:left; margin: 0 5% 0 5%;}
 
-.aboutCont {float: right;}
 
-ul {
+footer { background-color: #e0bb00;}
+
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
   }
   
-  li {
+ nav li {
     float: left; margin-left: 25%;
   }
   
-  li a {
+  nav li a {
     display: block;
     padding: 8px;
     background-color: #dddddd;
   }
 
+footer {
+  flex-shrink: 0; padding: 0 5% 0 5%;
+}
 
+footer ul {
+  list-style-type: none;
+  margin: 0 0 2% 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+footer li {
+  float: right; }
