--- a/maincss.css
+++ b/maincss.css
@@ -1,23 +1,34 @@
-body {background-color: #5c7dd8; display: flex; flex-direction: column; background-repeat: repeat; margin: 0 10% 0 10%; }
+body {background-image: linear-gradient(#284594, #000000); background-position: center;
+
+  background-repeat: no-repeat; background-size: cover; display: flex; flex-direction: column; margin: 0 10% 0 10%;
+
+}
+
+/*  background-color: #5c7dd8; */
 
 html, body {
   height: 100%;
 }
 
-.container {flex: 1 0 auto;}
+header {background-image: linear-gradient(#5a5a5a, #afafaf); margin-bottom: 1%;}
 
-.title {background-color: #e0bb00;}
+.container {flex: 1 0 auto; background-image: linear-gradient(#afafaf, #ffffff);}
 
 .center {text-align: center;}
 
-.missionHeader {text-align:center; font-style: italic;} 
+.missionHeader {text-align:center; font-style: italic; text-decoration: underline;} 
 
 .missionPara {margin: 0 10% 0 10%;}
 
 .aboutPic {width:20%; border-radius: 20px; float:left; margin: 0 5% 0 5%;}
 
 
-footer { background-color: #e0bb00;}
+footer { background-image: linear-gradient(#afafaf, #444444);}
+
+nav {
+
+background-image: linear-gradient(#afafaf, #ffffff);
+}
 
 nav ul {
     list-style-type: none;
@@ -33,7 +44,6 @@ nav ul {
   nav li a {
     display: block;
     padding: 8px;
-    background-color: #dddddd;
   }
 
 footer {
@@ -49,3 +59,9 @@ footer ul {
 
 footer li {
   float: right; }
+
+
+  footer p {
+
+    text-align: center;
+  }
