--- a/maincss.css
+++ b/maincss.css
@@ -1,4 +1,4 @@
-body {background-image: linear-gradient(#284594, #000000); background-position: center;
+body {background-image: linear-gradient(#284594, #000000); background-color: black; background-position: center;
 
   background-repeat: no-repeat; background-size: cover; display: flex; flex-direction: column; margin: 0 10% 0 10%;
 
