--- a/maincss.css
+++ b/maincss.css
@@ -7,7 +7,7 @@ body {background-image: linear-gradient(#284594, #000000); background-color: bla
 /*  background-color: #5c7dd8; */
 
 html, body {
-  height: 100%;
+  height: 100%; font-family: Arial Narrow, sans-serif; color: rgb(53, 53, 53);
 }
 
 header {background-image: linear-gradient(#5a5a5a, #afafaf); margin-bottom: 1%;}
@@ -21,6 +21,12 @@ header {background-image: linear-gradient(#5a5a5a, #afafaf); margin-bottom: 1%;}
 .missionPara {margin: 0 10% 0 10%;}
 
 .aboutPic {width:20%; border-radius: 20px; float:left; margin: 0 5% 0 5%;}
+
+#services {margin: 10% 5% 10% 5%; text-align: center;}
+
+#contacts {margin: 10% 5% 10% 5%; text-align: center;}
+
+.border {border-left: 1px solid black}
 
 
 footer { background-image: linear-gradient(#afafaf, #444444);}
@@ -43,7 +49,7 @@ nav ul {
   
   nav li a {
     display: block;
-    padding: 8px;
+    padding: 4px;
   }
 
 footer {
@@ -58,10 +64,19 @@ footer ul {
 }
 
 footer li {
-  float: right; }
+  float: right;  }
 
 
   footer p {
 
     text-align: center;
   }
+
+
+  span {
+
+    font-family: Brush Script MT, Brush Script Std, cursive;
+  }
+
+
+  th {text-decoration: underline;}
