--- a/maincss.css
+++ b/maincss.css
@@ -1,10 +1,16 @@
-body {background-image: linear-gradient(#284594, #000000); background-color: black; background-position: center;
+body {background-image: linear-gradient(#5c7dd8, #384157); background-color: black; background-position: center;
 
-  background-repeat: no-repeat; background-size: cover; display: flex; flex-direction: column; margin: 0 10% 0 10%;
+  background-repeat: repeat; background-size: cover; display: flex; flex-direction: column; margin: 0 10% 0 10%;
+
+  background-attachment: fixed;
 
 }
 
-/*  background-color: #5c7dd8; */
+/*  background-color: #5c7dd8;
+
+background-image: url("bg3.jpg"); background-attachment: fixed; --> Fixed position Background
+
+*/
 
 html, body {
   height: 100%; font-family: Arial Narrow, sans-serif; color: rgb(53, 53, 53);
@@ -24,9 +30,15 @@ header {background-image: linear-gradient(#5a5a5a, #afafaf); margin-bottom: 1%;}
 
 #services {margin: 10% 5% 10% 5%; text-align: center;}
 
-#contacts {margin: 10% 5% 10% 5%; text-align: center;}
+#contacts {margin: 10%; text-align: center;}
 
-.border {border-left: 1px solid black}
+.call {margin-left: 5%; }
+
+.form { float: left; border-right: 1px solid black; padding-right: 25%; margin-bottom: 5%;}
+
+
+td {padding: 5%;}
+
 
 
 footer { background-image: linear-gradient(#afafaf, #444444);}
@@ -41,6 +53,7 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
+
   }
   
  nav li {
