--- a/maincss.css
+++ b/maincss.css
@@ -16,6 +16,8 @@ html, body {
   height: 100%; font-family: Arial Narrow, sans-serif; color: rgb(53, 53, 53);
 }
 
+p {font-size: 18px;}
+
 header {background-image: linear-gradient(#5a5a5a, #afafaf); margin-bottom: 1%;}
 
 .container {flex: 1 0 auto; background-image: linear-gradient(#afafaf, #ffffff);}
