--- a/maincss.css
+++ b/maincss.css
@@ -1,4 +1,4 @@
-body {background-color: #5c7dd8; background-position: center;
+body {background-image: url("bg3.jpg"); background-position: center;
 
   background-repeat: repeat; background-size: cover; display: flex; flex-direction: column; margin: 0 10% 0 10%;
 
