--- a/maincss.css
+++ b/maincss.css
@@ -32,7 +32,7 @@ header {background-image: linear-gradient(#5a5a5a, #afafaf); margin-bottom: 1%;}
 
 #services {margin: 10% 5% 10% 5%; text-align: center;}
 
-#contacts {margin: 10%; text-align: center;}
+#contacts {margin: 10%; text-align: center; font-size: 30px;}
 
 .call {margin-left: 5%; }
 
@@ -48,6 +48,8 @@ footer { background-image: linear-gradient(#afafaf, #444444);}
 nav {
 
 background-image: linear-gradient(#afafaf, #ffffff);
+
+text-align: center;
 }
 
 nav ul {
@@ -55,16 +57,16 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-
+    justify-content: space-around;
   }
   
  nav li {
-    float: left; margin-left: 25%;
+    float: left; margin-left: 30%;
   }
   
   nav li a {
     display: block;
-    padding: 8px;
+    padding: 8px 0 8px 0;
   }
 
 footer {
